--- a/UI/public/index.html
+++ b/UI/public/index.html
@@ -12,15 +12,15 @@
     </style>
   </head>
   <body>
-    <div class="App-Main">
-        <div class="App-Container">
-            <div class="App-Sidebar">
+    <div class="app-main">
+        <div class="app-container">
+            <div class="app-sidebar">
                 <div class="logo p-4">
                     <img src="./images/ibt-logo.png" class="img img-fluid" />
                 </div>
             </div>
 
-            <div id="root" class="App-Main-Container"></div>
+            <div id="root" class="app-main-container"></div>
 
           </div>
       </div>
