--- a/SERVER/public/index.html
+++ b/SERVER/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>iBaset</title>
+    <title>React-Redux-Node-Mongo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
